test_regress/t/t_select_bad_msb.out
%Warning-LITENDIAN: t/t_select_bad_msb.v:11: Little bit endian vector: MSB < LSB of bit range: 0:22
                    ... Use "/* verilator lint_off LITENDIAN */" and lint_on around source to disable this message.
%Error: t/t_select_bad_msb.v:15: [1:4] Range extract has backward bit ordering, perhaps you wanted [4:1]
%Error: Exiting due to
